--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,2 +1,14 @@
-.test
-  background-color green
+body
+  margin 0
+  padding 0
+
+.container
+
+  &__card
+    background-color red
+    
+  h1
+    margin 0
+
+  &__imag
+    border 1px solid red
