--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,14 +1,16 @@
 body
   margin 0
   padding 0
+  background-color black
 
 .container
-
+  display flex
+  justify-content center
+  align-items center
+  //border 1px solid yellow
+  height 100vh
   &__card
-    background-color red
-    
+   
   h1
+    color: red
     margin 0
-
-  &__imag
-    border 1px solid red
