--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,16 +1,93 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,900&display=swap');
+
 body
   margin 0
   padding 0
-  background-color black
+  background-color #0E131F
+  font-family: 'Roboto', sans-serif;
 
 .container
   display flex
-  justify-content center
-  align-items center
+  flex-direction column
   //border 1px solid yellow
   height 100vh
+  width 100%
+  
   &__card
-   
-  h1
-    color: red
-    margin 0
+    //border 1px solid green
+    display flex
+    flex-direction column
+    align-items center
+    justify-content center
+    text-align center
+    height 50%
+    //background-color #38405F
+    //border 1px solid blue
+  
+    &--info
+      width: 70%
+      font-size: 1em
+      //background-color green
+
+      h1
+        color: white
+        margin 0
+
+      .change
+        color #FF0035
+
+    &--social
+      padding-top 3em
+      display flex
+      justify-content space-around
+      //border 1px solid red
+      width 60%
+      a
+        color white
+
+      a:hover
+        color #FF0035
+  
+  &__image
+    display flex
+    justify-content center
+    height 50%    
+    //text-align center
+    //border 1px solid yellow
+
+    img
+      width 100%
+      height auto
+
+      
+    
+      
+
+
+//media queries
+
+
+@media (min-width: 1024px)
+  .container
+    flex-direction row
+  
+    &__card
+      width 50%
+      height 100%
+
+      &--info
+        width: 85%
+        font-size: 1.5em
+      
+
+    &__image
+      display flex
+      align-items: center
+      height 100%
+      width 50%
+      //border 1px solid red
+
+     
+
+
+
